--- a/safari-utm-stripper.safariextension/Info.plist
+++ b/safari-utm-stripper.safariextension/Info.plist
@@ -25,7 +25,7 @@
 	<dict>
 		<key>Scripts</key>
 		<dict>
-			<key>Start</key>
+			<key>End</key>
 			<array>
 				<string>charisma.js</string>
 			</array>
