--- a/safari-utm-stripper.safariextension/Info.plist
+++ b/safari-utm-stripper.safariextension/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Sean Graham</string>
 	<key>Builder Version</key>
-	<string>7534.49</string>
+	<string>9537.76.4</string>
 	<key>CFBundleDisplayName</key>
 	<string>UTM Stripper</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2</string>
+	<string>2.0</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>4</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
@@ -31,6 +31,8 @@
 			</array>
 		</dict>
 	</dict>
+	<key>Description</key>
+	<string>Strips Google Analytics (i.e. Urchin Traffic Monitor) tokens from URL query strings.</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
