--- a/safari-utm-stripper.safariextension/Info.plist
+++ b/safari-utm-stripper.safariextension/Info.plist
@@ -29,6 +29,10 @@
 			<array>
 				<string>charisma.js</string>
 			</array>
+			<key>Start</key>
+			<array>
+				<string>charisma.js</string>
+			</array>
 		</dict>
 	</dict>
 	<key>ExtensionInfoDictionaryVersion</key>
