--- a/safari-utm-stripper.safariextension/Info.plist
+++ b/safari-utm-stripper.safariextension/Info.plist
@@ -13,26 +13,35 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.5</string>
+	<string>3.0</string>
 	<key>CFBundleVersion</key>
-	<string>9</string>
+	<string>10</string>
 	<key>Chrome</key>
 	<dict>
+		<key>Bars</key>
+		<array>
+			<dict>
+				<key>Filename</key>
+				<string>omnibar.html</string>
+				<key>Identifier</key>
+				<string>com.dosburros.safari-utm-stripper.bar</string>
+				<key>Label</key>
+				<string>UTM Stripper</string>
+			</dict>
+		</array>
 		<key>Global Page</key>
-		<string>omnibar.html</string>
+		<string>background.html</string>
 	</dict>
 	<key>Description</key>
 	<string>Strips Google Analytics (i.e. Urchin Traffic Monitor) tokens from URL query strings.</string>
 	<key>DeveloperIdentifier</key>
-	<string>0000000000</string>
+	<string>J3Q79T636D</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
 	<dict>
 		<key>Website Access</key>
 		<dict>
-			<key>Include Secure Pages</key>
-			<true/>
 			<key>Level</key>
 			<string>All</string>
 		</dict>
